<resources>
    <string name="app_name" translatable="false">Books Booth</string>
    <string name="main_title" translatable="false">Books Booth</string>
    <string name="showprofile_myprofiletitle">My profile</string>
    <string name="showprofile_userprofiletitle">%1$s\'s profile</string>
    <string name="editprofile_title">Edit your profile</string>
    <string name="editprofile_save">Save your profile</string>
    <string name="addbook_title">Add book</string>
    <string name="bookinfo_title">Book details</string>
    <string name="showprofile_profilepicture">Profile picture</string>
    <string name="bookinfo_writetoowner">Write to the owner</string>
    <string name="show_location">Show location</string>
    <string name="owned_books">Owned books</string>
    <string name="show_owned_book">Show owned books</string>
    <string name="lent_books">Lent books</string>
    <string name="borrowed_books">Borrowed books</string>
    <string name="to_be_returned">To be returned</string>
    <string name="hint_username">Username</string>
    <string name="hint_biography">Biography</string>
    <string name="hint_location">Location</string>
    <string name="default_username">Test</string>
    <string name="default_city">Unknown city</string>
    <string name="default_biography">No biography inserted yet</string>
    <string name="camera_option">Take picture from camera</string>
    <string name="gallery_option">Choose picture from gallery</string>
    <string name="reset_option">Reset the default picture</string>
    <string name="invalid_username">Username must not be empty</string>
    <string name="invalid_location_wrong">Location can contain only alphabetic characters</string>
    <string name="invalid_location_empty">Location must not be empty</string>
    <string name="discard_changes">Discard changes?</string>
    <string name="incorrect_username">Username field is currently empty.\nPlease, fill it</string>
    <string name="incorrect_location">Please, choose the location from the suggestions list</string>
    <string name="failed_obtain_picture">Something went wrong while obtaining the picture</string>
    <string name="failed_save_picture">Something went wrong while saving the profile picture.\nPlease, check your internet connection</string>
    <string name="failed_load_data">Something went wrong while retrieving your data. You will be signed out.</string>
    <string name="number_zero">0</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="anonymous">Not logged in</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="explore">Explore</string>
    <string name="my_library">My library</string>
    <string name="user_library">%1$s\'s library</string>
    <string name="profile">My profile</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in_welcome">Welcome</string>
    <string name="sign_in_welcome_back">Welcome back</string>
    <string name="sign_in_cancelled">Sign In cancelled</string>
    <string name="sign_in_no_internet_connection">Sign In failed. Please check your internet connection</string>
    <string name="sign_in_unknown_error">An unknown error occurred during Sign In</string>
    <string name="sign_out_succeeded">Sign Out succeeded</string>
    <string name="sign_out_failed">Sign Out failed</string>
    <string name="fui_name_hint">Username</string>
    <string name="complete_profile">Review and complete your information if you want</string>
    <string name="hint_editionYear">Edition Year</string>
    <string name="hint_condition">Book conditions</string>
    <string name="hint_publisher">Publisher</string>
    <string name="hint_author">Author</string>
    <string name="hint_title">Title</string>
    <string name="auto_fill">Auto-Fill</string>
    <string name="hint_isbn">ISBN</string>
    <string name="add_book_search_isbn">Search ISBN</string>
    <string name="book_author">Author</string>
    <string name="book_title">Title</string>
    <string name="book_publisher">Publisher</string>
    <string name="book_edition_year">Edition Year</string>
    <string name="add_book_invalid_isbn">invalid ISBN</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission. The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="scan_barcode">Scan barcode</string>
    <string name="saving_data">Saving your personal data. Please wait…</string>
    <string name="code_retrieved">Code Retrieved:</string>
    <string name="facebook_application_id" translatable="false">417996611977813</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb417996611977813</string>
    <string name="add_book_confirm">Add</string>
    <string name="add_book_cancel">Cancel</string>
    <string name="add_book_isbn_loading_title">Loading</string>
    <string name="add_book_isbn_loading_message">Retrieving ISBN info</string>
    <string name="rescan">Rescan</string>
    <string name="add_book_scan">Scan</string>
    <string name="add_book_query_ok">Information retrieved correctly</string>
    <string name="add_book_query_failed">Failed to obtain the required information.</string>
    <string name="add_book_query_no_results">No results found</string>
    <string name="add_book_saved">Book saved correctly</string>
    <string name="add_book_error">I was not able to save book information</string>
    <string name="hint_language">Language</string>
    <string name="add_book_condition_mint">Mint</string>
    <string name="add_book_condition_good">Good</string>
    <string name="add_book_condition_fair">Fair</string>
    <string name="add_book_condition_poor">Poor</string>
    <string name="ab_field_must_not_be_empty">Fields title and author must not be empty</string>
    <string name="autocomplete">Autocomplete</string>
    <string name="hint_tags">Tags</string>
    <string name="hint_author_add">Add author</string>
    <string name="ab_add_tag">Add Tag</string>
    <string name="would_take_picture">Would you like to add a picture?</string>
    <string name="take_picture_camera">Yes, take from camera</string>
    <string name="take_picture_gallery">Yes, take from gallery</string>
    <string name="no">No</string>
    <string name="operation_aborted">Operation aborted</string>
    <string name="fbs_show_more">More…</string>
    <string name="fbs_show_in_map">Show in map</string>
    <string name="unknown_authors">Unknown authors</string>
    <string name="error_no_internet">No internet connection</string>
    <string name="search">Search</string>
    <string name="hint_owner">Owner</string>
    <string name="book_conditions_list">Poor, Fair, Good, Mint</string>
    <string name="book_condition_any">Any condition</string>
    <string name="no_books">No books yet</string>
    <string name="my_books">My books</string>
    <string name="unknown">Unknown</string>
    <string name="no_tags_found">No tags found</string>
    <string name="book_picture">Book picture</string>
    <string name="delete">Delete</string>
    <string name="error_occurred">An error occurred</string>
    <string name="confirm_delete">Are you sure you want to delete the book?\nThis operation cannot be undone</string>
    <string name="default_city_turin">Turin</string>
    <string name="bookinfo_showprofile">Show profile</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="search_by_algolia_logo">Logo Search by Algolia</string>
    <string name="filter_results">Filter results</string>
    <string name="no_distance_filter">No distance filter</string>
    <string name="maximum_distance">Maximum distance: %d km</string>
    <string name="conditions_filter">At least in %s conditions</string>
    <string name="cancel">Cancel</string>
    <string name="action_map">Show map</string>
    <string name="attribute">Attribute</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="internet_needed">You need an active Internet connection to use this application</string>
    <string name="exit">Exit</string>
    <string name="no_results_found">No results found</string>
    <string name="oops">Oops…</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="active_chats">Active chats</string>
    <string name="archived_chats">Archived chats</string>
    <string name="chat">Chat</string>
    <string name="no_active_chats">No active chats yet</string>
    <string name="no_archived_chats">No archived chats yet</string>
    <string name="no_messages">No messages</string>
    <string name="loading">Loading…</string>
    <string name="bookinfo_deletebook">delete book</string>
    <string name="notifications_admin_channel_name" translatable="false">Global channel</string>
    <string name="notifications_admin_channel_description" translatable="false">Notifications sent from the app admin</string>
    <string name="send_message">Send message</string>
    <string name="message">Message</string>
    <string name="archive_conversation">Archive the conversation?</string>
    <string name="archive_conversation_message">If you confirm, neither you nor the peer will be able to send further messages in this conversation.</string>
    <string name="archive_conversation_not_possible">Impossible to archive the conversation.</string>
    <string name="archive_conversation_message_not_possible">Currently it is not possible to archive the conversation, since the borrowing has not yet been completed.</string>
    <string name="conversation_archived">Archived conversation</string>
    <string name="conversation_archived_message">The conversation has been archived by the peer user.</string>
    <string name="on_boarding">NoFAndroid</string>
    <string name="splash_intro_text">Welcome to Books Booth! Search or share your books here!</string>
    <string name="delete_conversation">Delete the conversation?</string>
    <string name="delete_conversation_message">If you confirm, this conversation will be deleted from your archive forever.</string>
    <string name="message_request_borrowing">I would like to borrow your book titled \'%1$s\'.</string>
    <string name="message_borrowing_request_reject">Your borrowing request has been rejected!</string>
    <string name="message_request_return">I would like to return you the book titled \'%1$s\'.</string>
    <string name="message_request_return_confirm">The borrowing concluded correctly. Thank you!.</string>
    <string name="error_perform_action">Something went wrong while performing the action. Please, check your Internet connection.</string>
    <string name="open_conversation">Open conversation</string>
    <string name="show_book">Show book</string>
    <string name="hint_rating_comment">Enter comment</string>
    <string name="rating_title">Give your feedback</string>
    <string name="show_ratings">Show Ratings</string>
    <string name="filter_available_books">Show only available books</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="confirm">Confirm</string>
    <string name="ask_book">Request book</string>
    <string name="request_for_borrow_from_peer">You\'ve been asked to lend this book to the user</string>
    <string name="request_for_book">Ask the user for borrowing his book</string>
    <string name="available">Available</string>
</resources>