<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_explore"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/explore" />
        <item
            android:id="@+id/nav_library"
            android:icon="@drawable/ic_library_black_24dp"
            android:title="@string/my_library" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/chat" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_sign_out_black_24dp"
            android:title="@string/sign_out" />
    </group>
</menu>
