<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".BookInfoFragment">

    <item
        android:id="@+id/fbi_show_profile"
        android:icon="@drawable/ic_person_white_24dp"
        android:title="@string/bookinfo_showprofile"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/fbi_show_chat"
        android:icon="@drawable/ic_chat_white_24dp"
        android:title="@string/open_conversation"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/fbi_delete_book"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/bookinfo_deletebook"
        android:visible="false"
        app:showAsAction="ifRoom" />
</menu>