<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:algolia="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/algolia_loading"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/algolia_no_results"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_results_found"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/algolia_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oops"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/something_went_wrong"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:visibility="visible" />

    </LinearLayout>

    <com.algolia.instantsearch.ui.views.Hits
        android:id="@+id/algolia_hits"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        algolia:itemLayout="@layout/item_book" />
</FrameLayout>
